--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,16 @@ after_success:
     - docker push augustbright/complex-server
     - docker push augustbright/complex-worker
     - docker push augustbright/complex-nginx
+
+deploy:
+    provider: elasticbeanstalk
+    region: eu-central-1
+    app: docker-complex
+    env: DockerComplex-env
+    bucket_name: elasticbeanstalk-eu-central-1-080279810462
+    bucket_path: docker-complex
+    on:
+        branch: master
+    
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
